--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     const g = document.getElementById('greeting');
     if (hour >= 0 && hour < 6) g.innerText = "go to bed.";
     else if (hour >= 6 && hour < 12) g.innerText = "morning.";
-    else if (hour >= 12 && hour < 17) g.innerText = "lets not slack off shall we?.";
-    else if (hour >= 17 && hour < 21) g.innerText = "how are we?.";
+    else if (hour >= 12 && hour < 17) g.innerText = "lets not slack off shall we?";
+    else if (hour >= 17 && hour < 21) g.innerText = "how are we?";
     else g.innerText = "how was our day darling.";
 
     // Notes
