--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     else if (hour >= 6 && hour < 12) g.innerText = "morning.";
     else if (hour >= 12 && hour < 17) g.innerText = "lets not slack off shall we?";
     else if (hour >= 17 && hour < 21) g.innerText = "how are we?";
-    else g.innerText = "how was our day darling.";
+    else g.innerText = "how was our day.";
 
     // Notes
     const na = document.getElementById('notes-area');
